--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <canvas id="canvas"></canvas>
     <p id="collection-description" style="font-style: italic; color: #555; margin-top: 0.5rem;"></p>
   </div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
